# retrokit

./: .env.example  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  themes.yaml
.github/workflows/: release.yml
image-assets/: manifest.json
image-assets/web-seo/: site.webmanifest
src/retro_asset_gen/: __init__.py  cli.py  gemini_client.py  generator.py  roms.py
src/retrokit/: cli.py  config.py  gemini_client.py  generator.py  image_processor.py  prompts.py  roms.py  theme_config.py
tests/: test_roms.py
