[project]
name = "retro-romset-cleaner"
version = "0.1.0"
description = "ROM deduplication tool for retro game collections"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Tiago Silva" }]
requires-python = ">=3.9"
dependencies = []

[project.scripts]
retro-romset-cleaner = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["main.py"]
sources = { "." = "" }

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
